Update portfolio: edited About page and styling

--- a/full-site.html
+++ b/full-site.html
@@ -11,25 +11,26 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="full-site.html#home">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="full-site.html#portfolio">Portfolio</a></li>
+                <li><a href="full-site.html#contact">Contact</a></li>
             </ul>
         </nav>
-    </header>
+    </header>    
 
     <main id="home">
         <div class="hero-container">
             <!-- Text Section -->
             <div class="text-section">
-                <h1>Hello, it's Me</h1>
-                <h2>[Your Name]</h2>
-                <h3>And I'm a Software Engineer</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada neque sed sapien ornare, euismod.</p>
+                <h1>Hello, I am</h1>
+                <h2>Romario Gustave</h2>
+                <h3>Software Engineer & Computer Science Graduate</h3>
+                <p>
+                    I'm a recent Computer Science graduate from Southern New Hampshire University with a strong foundation in full-stack development, cloud computing, and emerging AI technologies. I thrive on solving complex challenges—whether building scalable web applications or designing intelligent systems like my Tic Tac Toe game powered by Q-learning. Welcome to my portfolio, where you can explore my work and join me in pushing the boundaries of technology.
+                </p>
                 <a href="resume.pdf" class="btn">Download CV</a>
-            </div>
+            </div>            
 
             <!-- Interactive Photo Section -->
             <div class="image-section">
